objects/Configuration_Task__c.object
<CustomObject>
    <description>This object is used to track records related to the configuration of nCino.</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <description>Please select the role of the person responsible for completing this configuration task.</description>
        <inlineHelpText>Please select the role of the person responsible for completing this configuration task.</inlineHelpText>
        <label>Assigned To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>nCino PM</fullName>
                </value>
                <value>
                    <fullName>nCino IS</fullName>
                </value>
                <value>
                    <fullName>nCino Data Team</fullName>
                </value>
                <value>
                    <fullName>Bank Name Here - PM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Config_Category__c</fullName>
        <description>This picklist is dependent upon the Configuration Phase.</description>
        <inlineHelpText>This picklist is dependent upon the Configuration Phase.</inlineHelpText>
        <label>Config Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Config_Phase__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approval Processes</fullName>
                </value>
                <value>
                    <fullName>Business Specifications</fullName>
                </value>
                <value>
                    <fullName>Configuration QA</fullName>
                </value>
                <value>
                    <fullName>Credit Reports</fullName>
                </value>
                <value>
                    <fullName>Custom Config</fullName>
                </value>
                <value>
                    <fullName>Data Load</fullName>
                </value>
                <value>
                    <fullName>Data QA</fullName>
                </value>
                <value>
                    <fullName>Discovery &amp; Requirements</fullName>
                </value>
                <value>
                    <fullName>Go-Live</fullName>
                </value>
                <value>
                    <fullName>Install Base Organization &amp; nCino Application</fullName>
                </value>
                <value>
                    <fullName>Laser Pro / FLO Document Preparation</fullName>
                </value>
                <value>
                    <fullName>List Views</fullName>
                </value>
                <value>
                    <fullName>Loan Process</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous / Other</fullName>
                </value>
                <value>
                    <fullName>Organizational Configuration</fullName>
                </value>
                <value>
                    <fullName>Page Layout &amp; Field Updates/Additions</fullName>
                </value>
                <value>
                    <fullName>Pilot Team Training</fullName>
                </value>
                <value>
                    <fullName>Post-Training Updates</fullName>
                </value>
                <value>
                    <fullName>Pre-Pilot Testing</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Document Catalogs</fullName>
                </value>
                <value>
                    <fullName>Project Initiation</fullName>
                </value>
                <value>
                    <fullName>Queue Management</fullName>
                </value>
                <value>
                    <fullName>Relationship Statistics</fullName>
                </value>
                <value>
                    <fullName>Reports &amp; Dashboards</fullName>
                </value>
                <value>
                    <fullName>Risk Rating</fullName>
                </value>
                <value>
                    <fullName>Search &amp; Lookup Filters</fullName>
                </value>
                <value>
                    <fullName>Spreads &amp; Spreading Templates</fullName>
                </value>
                <value>
                    <fullName>Validation Rules</fullName>
                </value>
                <value>
                    <fullName>Workflow &amp; Alerts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Config_Phase__c</fullName>
        <description>These are the different phases of an nCino configuration.</description>
        <inlineHelpText>These are the different phases of an nCino configuration.</inlineHelpText>
        <label>Config Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Define</fullName>
                </value>
                <value>
                    <fullName>2 - Integrate</fullName>
                </value>
                <value>
                    <fullName>3 - Discover</fullName>
                </value>
                <value>
                    <fullName>4 - Configure</fullName>
                </value>
                <value>
                    <fullName>5 - Validate</fullName>
                </value>
                <value>
                    <fullName>6 - Deploy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Config_Status__c</fullName>
        <label>Config Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Pending Client Action</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <description>Enter the Date when a configuration task was completed.</description>
        <inlineHelpText>Enter the Date when a configuration task was completed.</inlineHelpText>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hours_to_Complete__c</fullName>
        <description>Used to track the time it takes to complete a configuration task.</description>
        <inlineHelpText>Please enter the number of hours it took to complete this configuration task.  Partial hours should be entered as a decimal (i.e., 15 minutes should be entered as .25).</inlineHelpText>
        <label>Hours to Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <label>Percent Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10 %</fullName>
                </value>
                <value>
                    <fullName>20 %</fullName>
                </value>
                <value>
                    <fullName>30 %</fullName>
                </value>
                <value>
                    <fullName>40 %</fullName>
                </value>
                <value>
                    <fullName>50 %</fullName>
                </value>
                <value>
                    <fullName>60 %</fullName>
                </value>
                <value>
                    <fullName>70 %</fullName>
                </value>
                <value>
                    <fullName>80 %</fullName>
                </value>
                <value>
                    <fullName>90 %</fullName>
                </value>
                <value>
                    <fullName>100 %</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Enter the Project Name related to this configuration task.</description>
        <inlineHelpText>Enter the Project Name related to this configuration task.</inlineHelpText>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Configuration Tasks</relationshipLabel>
        <relationshipName>Configuration_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status_Notes_Comments__c</fullName>
        <description>Please enter any relevant configuration notes.</description>
        <inlineHelpText>Please enter any relevant configuration notes.</inlineHelpText>
        <label>Status Notes / Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Task_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marking a task as complete will automatically update the completion date and set percent complete to 100%.</description>
        <inlineHelpText>Marking a task as complete will automatically update the completion date and set percent complete to 100%.</inlineHelpText>
        <label>Task Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Detail__c</fullName>
        <description>Please enter a description of the configuration task to be tested &amp; completed.</description>
        <inlineHelpText>Please enter a description of the configuration task to be tested &amp; completed.</inlineHelpText>
        <label>Task Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>lookupKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used as a Unique Identifier when loading configuration tasks with the nCino Logbook.</description>
        <externalId>true</externalId>
        <inlineHelpText>Used as a Unique Identifier when loading configuration tasks with the nCino Logbook.</inlineHelpText>
        <label>lookupKey</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Configuration Task</label>
    <nameField>
        <displayFormat>Config-{00000}</displayFormat>
        <label>Config Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Hours_to_Complete_Required</fullName>
        <active>true</active>
        <description>You must enter the approximate amount of time it took to complete this task before saving the record as complete</description>
        <errorConditionFormula>AND(
ISBLANK(Hours_to_Complete__c),
Task_Complete__c = True)</errorConditionFormula>
        <errorDisplayField>Hours_to_Complete__c</errorDisplayField>
        <errorMessage>You must enter the approximate amount of time it took to complete this task before saving the record as complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Working_Requires_Percent_Complete</fullName>
        <active>true</active>
        <description>If a Configuraiton Task is in the &apos;Working&apos; Status, please assign a completion percentage</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Config_Status__c , &apos;Working&apos;), 
ISPICKVAL(Percent_Complete__c , &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Percent_Complete__c</errorDisplayField>
        <errorMessage>If a Configuraiton Task is in the &apos;Working&apos; Status, please assign a completion percentage</errorMessage>
    </validationRules>
</CustomObject>